--- a/ContactUs.html
+++ b/ContactUs.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav>
-           <div class="logo"> <a href="#"><img src="./resources/images/logo.JPG" alt="SheRoams Logo"></a> </div>
+           <div class="logo"> <a href=""./Index.html""><img src="./resources/images/logo.JPG" alt="SheRoams Logo"></a> </div>
             <ul>
                 <li><a href="./Index.html">Home</a></li>
                 <li><a href="./Index.html#destinations">Destinations</a></li>
